<resources>
    <string name="app_name">Your Training Day</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type_password">Type password</string>
    <string name="login">Login</string>
    <string name="type_username">Type username</string>
    <string name="log_out">Log out</string>
    <string name="planai">Planai</string>
    <string name="treneriai">Treneriai</string>
    <string name="coach1">coach1</string>
    <string name="coach2">coach2</string>
    <string name="gym1">gym1</string>
    <string name="planas_sal_je">Planas Salėje</string>
    <string name="todo">TODO</string>
    <string name="planas_namie">Planas Namie</string>
    <string name="vartotojo_puslap">Į vartotojo puslapį</string>
    <string name="Pratimai" />
</resources>