<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    tools:context=".PlanaiFragment">


    <Button
        android:id="@+id/button_planai"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="68dp"
        android:backgroundTint="@color/white"
        android:text="@string/planai"
        android:textAppearance="?android:attr/textAppearanceButton"
        android:textColor="@color/black"
        android:textSize="11sp"
        app:layout_constraintEnd_toStartOf="@+id/button_treneriai"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_treneriai"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/white"
        android:text="@string/treneriai"
        android:textColor="@color/black"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="@+id/button_planai"
        app:layout_constraintEnd_toStartOf="@+id/button_pratimai"
        app:layout_constraintStart_toEndOf="@+id/button_planai"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button_pratimai"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/white"
        android:text="@string/Pratimai"
        android:textColor="@color/black"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_treneriai"
        app:layout_constraintTop_toTopOf="parent"

        tools:text="Pratimai" />

    <Button
        android:id="@+id/background"
        android:layout_width="411dp"
        android:layout_height="109dp"
        android:backgroundTint="#c2c0c0"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_treneriai" />

    <Button
        android:id="@+id/Namie"
        android:layout_width="111dp"
        android:layout_height="65dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/white"
        android:text=""
        app:layout_constraintEnd_toStartOf="@+id/Lauke"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/background"
        app:layout_constraintTop_toBottomOf="@+id/button_planai" />

    <Button
        android:id="@+id/Lauke"
        android:layout_width="111dp"
        android:layout_height="65dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/white"
        android:text=""
        app:layout_constraintEnd_toStartOf="@+id/Klube"
        app:layout_constraintHorizontal_bias="0.887"
        app:layout_constraintStart_toStartOf="@+id/background"
        app:layout_constraintTop_toBottomOf="@+id/button_treneriai" />

    <Button
        android:id="@+id/Klube"
        android:layout_width="111dp"
        android:layout_height="65dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/white"
        android:text=""
        app:layout_constraintEnd_toEndOf="@+id/background"
        app:layout_constraintTop_toBottomOf="@+id/button_pratimai" />

    <Button
        android:id="@+id/button9"
        android:layout_width="56dp"
        android:layout_height="30dp"
        android:foreground="@drawable/namie"
        app:layout_constraintEnd_toEndOf="@+id/Namie"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/Namie"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="152dp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="56dp"
        android:layout_height="30dp"
        android:foreground="@drawable/lauke"
        app:layout_constraintEnd_toEndOf="@+id/Lauke"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/Lauke"
        tools:layout_editor_absoluteY="152dp" />

    <Button
        android:id="@+id/button6"
        android:layout_width="56dp"
        android:layout_height="30dp"
        android:foreground="@drawable/klube"
        app:layout_constraintEnd_toEndOf="@+id/Klube"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/Klube"
        tools:layout_editor_absoluteY="152dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:text="Namie"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/Namie"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="@+id/Namie"
        tools:layout_editor_absoluteY="182dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:text="Lauke"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/Lauke"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/Lauke"
        tools:layout_editor_absoluteY="182dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:text="Klube"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/Klube"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="@+id/Klube"
        tools:layout_editor_absoluteY="182dp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="403dp"
        android:layout_height="336dp"
        android:layout_marginStart="2dp"

        android:layout_marginEnd="2dp"
        android:src="@drawable/sportPlanPhoto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="223dp" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="406dp"
        android:layout_height="390dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:adjustViewBounds="true"
        android:scaleType="centerInside"
        android:src="@drawable/sportPlanPhoto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="508dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:text="Sporto Planas Namie"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="397dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="287dp"
        android:layout_height="80dp"
        android:elevation="10dp"
        android:text="Šis sporto planas yra sukurtas patogiai užsiimti fizine veikla namuose"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="447dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="253dp"
        android:layout_height="38dp"
        android:elevation="10dp"
        android:text="Sporto Planas Lauke"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="693dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="284dp"
        android:layout_height="101dp"
        android:text="Šis sporto planas orientuotas į lauke atliekamus sportinius pratimus kuriems reikia šiektiek daugiau vietos"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="740dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Pradžia"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        tools:layout_editor_absoluteX="21dp"
        tools:layout_editor_absoluteY="852dp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Mityba"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="103dp"
        tools:layout_editor_absoluteY="852dp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sportas"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="172dp"
        tools:layout_editor_absoluteY="852dp" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Pranešimai"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="243dp"
        tools:layout_editor_absoluteY="852dp" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Daugiau"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="334dp"
        tools:layout_editor_absoluteY="852dp" />

    <Button
        android:id="@+id/button7"
        android:text=""
        android:backgroundTint="@color/black"
        android:layout_width="52dp"
        android:layout_height="3dp"
        tools:layout_editor_absoluteX="173dp"
        tools:layout_editor_absoluteY="875dp" />


</androidx.constraintlayout.widget.ConstraintLayout>
